实现拓扑排序

--- a/testGragh.ipynb
+++ b/testGragh.ipynb
@@ -243,6 +243,248 @@
     "if __name__ == '__main__':\n",
     "    print(dfsQueen())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "1\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "1\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 实现拓扑排序\n",
+    "class Vertex():\n",
+    "    def __init__(self, key):\n",
+    "        # 顶点的id\n",
+    "        self.id = key\n",
+    "        # 顶点的连接,以字典的形式存储，key是顶点对象，value是权重\n",
+    "        self.connectedTo = {}\n",
+    "        \n",
+    "        # 针对广度优先搜索的辅助变量\n",
+    "        self.color = 'white'  # 顶点的颜色，白色表示未访问，灰色表示访问过但未探索，黑色表示访问过且探索过\n",
+    "        self.dist = 0  # 顶点的距离\n",
+    "        self.pred = None  # 顶点的前驱\n",
+    "        \n",
+    "        # 针对深度优先搜索的辅助变量\n",
+    "        self.disc = 0\n",
+    "        self.fin = 0\n",
+    "    \n",
+    "    def addNeighbor(self, nbr, weight=0):\n",
+    "        # 添加邻接顶点\n",
+    "        self.connectedTo[nbr] = weight\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        # 返回顶点的连接信息\n",
+    "        return str(self.id) + ' connectedTo: ' + str([x.id for x in self.connectedTo])\n",
+    "    \n",
+    "    def getConnections(self):\n",
+    "        # 返回所有连接的顶点\n",
+    "        return self.connectedTo.keys()\n",
+    "    \n",
+    "    def getId(self):\n",
+    "        # 返回顶点的id\n",
+    "        return self.id\n",
+    "    \n",
+    "    def getWeight(self, nbr):\n",
+    "        # 返回顶点的权重\n",
+    "        return self.connectedTo[nbr]\n",
+    "    \n",
+    "    # 针对广度优先搜索的辅助函数\n",
+    "    # 针对广度优先搜索的辅助函数\n",
+    "    # 针对广度优先搜索的辅助函数\n",
+    "    def setColor(self, color):\n",
+    "        self.color = color\n",
+    "        \n",
+    "    def getColor(self):\n",
+    "        return self.color\n",
+    "    \n",
+    "    def setDistance(self, d):\n",
+    "        self.dist = d\n",
+    "        \n",
+    "    def getDistance(self):\n",
+    "        return self.dist\n",
+    "    \n",
+    "    def setPred(self, p):\n",
+    "        self.pred = p\n",
+    "        \n",
+    "    def getPred(self):\n",
+    "        return self.pred\n",
+    "    \n",
+    "    # 针对深度优先搜索的辅助函数\n",
+    "    # 针对深度优先搜索的辅助函数\n",
+    "    # 针对深度优先搜索的辅助函数\n",
+    "    def setDiscovery(self, dtime):\n",
+    "        self.disc = dtime\n",
+    "        \n",
+    "    def getDiscovery(self):\n",
+    "        return self.disc\n",
+    "    \n",
+    "    def setFinish(self, ftime):\n",
+    "        self.fin = ftime\n",
+    "        \n",
+    "    def getFinish(self):\n",
+    "        return self.fin\n",
+    "\n",
+    "\n",
+    "# 实现Graph类\n",
+    "class Graph():\n",
+    "    def __init__(self):\n",
+    "        # 图的顶点列表\n",
+    "        self.vertList = {}\n",
+    "        # 顶点的个数\n",
+    "        self.numVertices = 0\n",
+    "    \n",
+    "    def addVertex(self, key):\n",
+    "        # 添加顶点\n",
+    "        self.numVertices += 1\n",
+    "        newVertex = Vertex(key)\n",
+    "        self.vertList[key] = newVertex\n",
+    "        return newVertex\n",
+    "    \n",
+    "    def getVertex(self, n):\n",
+    "        # 返回顶点\n",
+    "        if n in self.vertList:\n",
+    "            return self.vertList[n]\n",
+    "        else:\n",
+    "            return None\n",
+    "        \n",
+    "    def __contains__(self, n):\n",
+    "        # 判断顶点是否在图中\n",
+    "        return n in self.vertList\n",
+    "    \n",
+    "    def addEdge(self, f, t, cost=0):\n",
+    "        # 添加边\n",
+    "        # f是起点，t是终点，cost是权重\n",
+    "        if f not in self.vertList:\n",
+    "            nv = self.addVertex(f)\n",
+    "        if t not in self.vertList:\n",
+    "            nv = self.addVertex(t)\n",
+    "        self.vertList[f].addNeighbor(self.vertList[t], cost)\n",
+    "        \n",
+    "    def getVertices(self):\n",
+    "        # 返回所有顶点\n",
+    "        return self.vertList.keys()\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        # 迭代器\n",
+    "        # 返回所有顶点\n",
+    "        # 形式为每一个顶点相连的所以顶点\n",
+    "        return iter(self.vertList.values())\n",
+    "    \n",
+    "\n",
+    "# 生成一个DAG图\n",
+    "def buildGraph():\n",
+    "    g = Graph()\n",
+    "    for i in range(6):\n",
+    "        g.addVertex(i)\n",
+    "    g.addEdge(0, 1, 5)\n",
+    "    g.addEdge(0, 2, 3)\n",
+    "    g.addEdge(1, 3, 6)\n",
+    "    g.addEdge(1, 4, 4)\n",
+    "    g.addEdge(2, 1, 2)\n",
+    "    g.addEdge(2, 4, 7)\n",
+    "    g.addEdge(3, 4, -1)\n",
+    "    g.addEdge(3, 5, 1)\n",
+    "    g.addEdge(4, 5, -2)\n",
+    "    return g\n",
+    "\n",
+    "# 队列\n",
+    "class Queue:\n",
+    "    def __init__(self):\n",
+    "        self.items = []\n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        return self.items == []\n",
+    "\n",
+    "    def enqueue(self, item):  # 入队\n",
+    "        self.items.insert(0, item)\n",
+    "\n",
+    "    def dequeue(self):  # 出队\n",
+    "        return self.items.pop()\n",
+    "\n",
+    "    def size(self):\n",
+    "        return len(self.items)\n",
+    "\n",
+    "# BFS拓扑排序\n",
+    "def bfsTopo(g):\n",
+    "    # g为图\n",
+    "    # 生成入度字典\n",
+    "    in_degree = {}\n",
+    "    for vertex in g:\n",
+    "        in_degree[vertex] = 0\n",
+    "    for vertex in g:\n",
+    "        for neighbor in vertex.getConnections():\n",
+    "            in_degree[neighbor] += 1\n",
+    "    # 入度为0的顶点入队\n",
+    "    queue = Queue()\n",
+    "    for vertex in in_degree:\n",
+    "        if in_degree[vertex] == 0:\n",
+    "            queue.enqueue(vertex)\n",
+    "    # 拓扑排序\n",
+    "    while queue.size() > 0:\n",
+    "        current_vertex = queue.dequeue()\n",
+    "        print(current_vertex.getId())\n",
+    "        for neighbor in current_vertex.getConnections():\n",
+    "            in_degree[neighbor] -= 1\n",
+    "            if in_degree[neighbor] == 0:\n",
+    "                queue.enqueue(neighbor)\n",
+    "                \n",
+    "# 测试\n",
+    "if __name__ == '__main__':\n",
+    "    g = buildGraph()\n",
+    "    bfsTopo(g)\n",
+    "    \n",
+    "\n",
+    "# DFS拓扑排序\n",
+    "def dfsTopo(g):\n",
+    "    # g为图\n",
+    "    # 时间戳\n",
+    "    time = 0\n",
+    "    # 深度优先搜索\n",
+    "    def dfsVisit(vertex):\n",
+    "        nonlocal time\n",
+    "        time += 1\n",
+    "        vertex.setDiscovery(time)\n",
+    "        vertex.setColor('gray')\n",
+    "        for neighbor in vertex.getConnections():\n",
+    "            if neighbor.getColor() == 'white':\n",
+    "                neighbor.setPred(vertex)\n",
+    "                dfsVisit(neighbor)\n",
+    "        vertex.setColor('black')\n",
+    "        time += 1\n",
+    "        vertex.setFinish(time)\n",
+    "        print(vertex.getId())\n",
+    "    # 初始化\n",
+    "    for vertex in g:\n",
+    "        vertex.setColor('white')\n",
+    "        vertex.setPred(None)\n",
+    "    # 深度优先搜索\n",
+    "    for vertex in g:\n",
+    "        if vertex.getColor() == 'white':\n",
+    "            dfsVisit(vertex)\n",
+    "            \n",
+    "# 测试\n",
+    "if __name__ == '__main__':\n",
+    "    g = buildGraph()\n",
+    "    dfsTopo(g)"
+   ]
   }
  ],
  "metadata": {
