梯度下降法、牛顿法

--- a/testGragh.ipynb
+++ b/testGragh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -484,6 +484,68 @@
     "if __name__ == '__main__':\n",
     "    g = buildGraph()\n",
     "    dfsTopo(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'>' not supported between instances of 'Vertex' and 'Vertex'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 36\u001b[0m\n\u001b[0;32m     34\u001b[0m g\u001b[38;5;241m.\u001b[39maddEdge(\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     35\u001b[0m g\u001b[38;5;241m.\u001b[39maddEdge(\u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m---> 36\u001b[0m \u001b[43mdijkstra\u001b[49m\u001b[43m(\u001b[49m\u001b[43mg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetVertex\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m v \u001b[38;5;129;01min\u001b[39;00m g:\n\u001b[0;32m     38\u001b[0m     \u001b[38;5;28mprint\u001b[39m(v\u001b[38;5;241m.\u001b[39mgetId(), v\u001b[38;5;241m.\u001b[39mgetDistance())\n",
+      "Cell \u001b[1;32mIn[10], line 11\u001b[0m, in \u001b[0;36mdijkstra\u001b[1;34m(aGraph, start)\u001b[0m\n\u001b[0;32m      9\u001b[0m pq \u001b[38;5;241m=\u001b[39m PriorityQueue()\n\u001b[0;32m     10\u001b[0m start\u001b[38;5;241m.\u001b[39msetDistance(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m---> 11\u001b[0m \u001b[43mpq\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbuildHeap\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[43mv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetDistance\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mv\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mv\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43maGraph\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m pq\u001b[38;5;241m.\u001b[39misEmpty():\n\u001b[0;32m     13\u001b[0m     currentVert \u001b[38;5;241m=\u001b[39m pq\u001b[38;5;241m.\u001b[39mdelMin()\n",
+      "File \u001b[1;32mf:\\MyProject\\module\\PriorityQueue.py:33\u001b[0m, in \u001b[0;36mPriorityQueue.buildHeap\u001b[1;34m(self, alist)\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbuildHeap\u001b[39m(\u001b[38;5;28mself\u001b[39m, alist):\n\u001b[1;32m---> 33\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbuildHeap\u001b[49m\u001b[43m(\u001b[49m\u001b[43malist\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mf:\\MyProject\\module\\Heap.py:57\u001b[0m, in \u001b[0;36mMinBinaryHeap.buildHeap\u001b[1;34m(self, alist)\u001b[0m\n\u001b[0;32m     55\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheapList \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m alist[:]\n\u001b[0;32m     56\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m i \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m---> 57\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpercDown\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     58\u001b[0m     i \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "File \u001b[1;32mf:\\MyProject\\module\\Heap.py:26\u001b[0m, in \u001b[0;36mMinBinaryHeap.percDown\u001b[1;34m(self, i)\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m i \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcurrentSize:\n\u001b[0;32m     25\u001b[0m     mc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mMinChild(i)\n\u001b[1;32m---> 26\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mheapList\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mheapList\u001b[49m\u001b[43m[\u001b[49m\u001b[43mmc\u001b[49m\u001b[43m]\u001b[49m:\n\u001b[0;32m     27\u001b[0m         tmp \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheapList[i]\n\u001b[0;32m     28\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheapList[i] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheapList[mc]\n",
+      "\u001b[1;31mTypeError\u001b[0m: '>' not supported between instances of 'Vertex' and 'Vertex'"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.append('.')\n",
+    "from module.Graph import Graph, Vertex\n",
+    "from module.PriorityQueue import PriorityQueue\n",
+    "\n",
+    "# 实现Dijkstra算法\n",
+    "def dijkstra(aGraph, start):\n",
+    "    # aGraph为图，start为起点\n",
+    "    pq = PriorityQueue()\n",
+    "    start.setDistance(0)\n",
+    "    pq.buildHeap([(v.getDistance(), v) for v in aGraph])\n",
+    "    while not pq.isEmpty():\n",
+    "        currentVert = pq.delMin()\n",
+    "        for nextVert in currentVert.getConnections():\n",
+    "            newDist = currentVert.getDistance() + currentVert.getWeight(nextVert)\n",
+    "            # 顶点不支持比较\n",
+    "            if newDist < nextVert.getDistance():\n",
+    "                nextVert.setDistance(newDist)\n",
+    "                nextVert.setPred(currentVert)\n",
+    "                pq.decreaseKey(nextVert, newDist)\n",
+    "                \n",
+    "# 测试\n",
+    "if __name__ == '__main__':\n",
+    "    g = Graph()\n",
+    "    for i in range(6):\n",
+    "        g.addVertex(i)\n",
+    "    g.addEdge(0, 1, 5)\n",
+    "    g.addEdge(0, 2, 3)\n",
+    "    g.addEdge(1, 3, 6)\n",
+    "    g.addEdge(1, 4, 4)\n",
+    "    g.addEdge(2, 1, 2)\n",
+    "    g.addEdge(2, 4, 7)\n",
+    "    g.addEdge(3, 4, -1)\n",
+    "    g.addEdge(3, 5, 1)\n",
+    "    g.addEdge(4, 5, -2)\n",
+    "    dijkstra(g, g.getVertex(0))\n",
+    "    for v in g:\n",
+    "        print(v.getId(), v.getDistance())"
    ]
   }
  ],
