--- a/test.ipynb
+++ b/test.ipynb
@@ -2954,6 +2954,29 @@
     "    \n",
     "print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.ones(10)*2\n",
+    "arr = np.square(arr)\n",
+    "sum(arr)"
+   ]
   }
  ],
  "metadata": {
